<resources>
    <string name="app_name">Finist</string>
    <string name="finist">FINIST</string>
    <string name="login_button">Вход</string>
    <string name="login_login">Логин</string>
    <string name="login_pass">Пароль</string>
    <string name="login_name">Имя</string>
    <string name="login_level">Уровень доступа</string>
    <string name="panel">Административая панель</string>
    <string name="login_autoriz">Авторизация</string>
    <string name="menu_close_day">Закрыть день</string>
    <string name="menu_open_day">Открыть день</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_report">Сформировать отчёт</string>
    <string name="settings_back">Вернуться на главный экран</string>
    <string name="settings_halls">Залы</string>
    <string name="settings_acc_value">Введите значения</string>
    <string name="settings_halls_add">Добавить зал</string>
    <string name="settings_acounts">Аккаунты</string>
    <string name="settings_acounts_add">Добавить аккаунт</string>
    <string name="settings_categories_goods">Категории / Товары</string>
    <string name="settings_stock">Склад</string>
    <string name="settings_stock_p1">Склад предприятия  |  Категории</string>
    <string name="settings_stock_p2">Склад предприятия  |  Позиции</string>
    <string name="settings_categories_goods_p1">Категории и товары  |  Категории</string>
    <string name="settings_categories_goods_p2">Категории и товары  |  Товары</string>
    <string name="settings_product_add">Добавить товар</string>
    <string name="settings_categories_back">Вернуться в категории</string>
</resources>
