<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corp.a.i.finistarm.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/loginFn"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_above="@+id/panel"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/intro"
            android:text="@string/finist"
            android:textColor="#000"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginAu"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/robotolight"
            android:text="@string/panel"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginFn"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/login_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginBt"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/robotoregular"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.885" />

        <TextView
            android:id="@+id/loginAu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginLg"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/login_autoriz"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/loginLg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <EditText
            android:id="@+id/loginPs"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_above="@+id/loginBt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:fontFamily="@font/robotoregular"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/login_pass"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingBottom="1dp"
            android:paddingEnd="1dp"
            android:paddingLeft="20dp"
            android:paddingRight="1dp"
            android:paddingStart="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toTopOf="@+id/loginBt"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/loginLg" />

        <EditText
            android:id="@+id/loginLg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_above="@+id/loginPs"
            android:layout_alignLeft="@+id/loginPs"
            android:layout_alignStart="@+id/loginPs"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:fontFamily="@font/robotoregular"
            android:hint="@string/login_login"
            android:inputType="textPersonName"
            android:paddingBottom="1dp"
            android:paddingEnd="1dp"

            android:paddingLeft="20dp"
            android:paddingRight="1dp"
            android:paddingStart="20dp"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/loginBt"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.443" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
