<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corp.a.i.finistarm.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/menuFinist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/intro"
            android:text="@string/finist"
            android:textColor="#000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/menuFinist"
            android:layout_alignStart="@+id/menuFinist"
            android:layout_below="@+id/menuFinist"
            android:fontFamily="@font/robotolight"
            android:text="@string/panel"
            android:textColor="#000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:fontFamily="@font/robotolight"
            android:text="@string/menu_close_day"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/menu_open_day"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_toLeftOf="@+id/button"
            android:layout_toStartOf="@+id/button"
            android:backgroundTint="#fff"
            android:fontFamily="@font/robotoregular"
            android:text="@string/menu_open_day"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_rectangle"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="135dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/view"
            android:layout_alignStart="@+id/view"
            android:layout_below="@+id/view"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/spinner"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/spinner"
            android:layout_toRightOf="@+id/spinner"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/view"
            android:layout_alignRight="@+id/view"
            android:layout_alignTop="@+id/spinner2"
            android:text="Button" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
